--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&display=swap');
+
+
 a {
     text-decoration: none;
     color: #ffffff;
@@ -1062,7 +1064,33 @@ body {
     }
 }
 
+/* Kontak*/
+#kontak {
+    position: relative;
+    z-index: 2;
+}
 
+#kontak::after {
+    content: "";
+    width: 100%;
+    height: 70%;
+    background: linear-gradient(rgba(var(--c-brand-rgb), 0.8), rgba(var(--c-brand-rgb), 0.8)), url(../images/counter.jpg);
+    background-position: center;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+#kontak .form-control {
+    border-radius: 0;
+}
+
+#kontak .form-control:focus {
+    box-shadow: none;
+    border-color: blue;
+}
 
 .contact {
     height: 60vh;
