--- a/admin/Dashboard_Admin/style2.css
+++ b/admin/Dashboard_Admin/style2.css
@@ -85,6 +85,12 @@ body {
 	padding-bottom: 20px;
 	box-sizing: content-box;
 }
+#sidebar .brand img {
+	width: 45px;
+	margin-right: 15px;
+	display: flex;
+	justify-content: center;
+}
 #sidebar .side-menu {
 	width: 100%;
 	margin-top: 48px;
@@ -397,129 +403,47 @@ body {
 #content main .box-info li .text p {
 	color: var(--dark);	
 }
+#content main .container {
+	display: flex;
+	margin-top: 100px;
 
-
-
-
-
-#content main .table-data {
+}
+#content main .row {
 	display: flex;
 	flex-wrap: wrap;
-	grid-gap: 24px;
-	margin-top: 24px;
-	width: 100%;
-	color: var(--dark);
 }
-#content main .table-data > div {
-	border-radius: 20px;
-	background: var(--light);
-	padding: 24px;
-	overflow-x: auto;
-}
-#content main .table-data .head {
+#content main .container {
 	display: flex;
-	align-items: center;
-	grid-gap: 16px;
-	margin-bottom: 24px;
+	margin-top: 30px;
+
 }
-#content main .table-data .head h3 {
-	margin-right: auto;
-	font-size: 24px;
-	font-weight: 600;
-}
-#content main .table-data .head .bx {
-	cursor: pointer;
+#content main .card {
+	margin: 45PX;
 }
 
-#content main .table-data .order {
-	flex-grow: 1;
-	flex-basis: 500px;
-}
-#content main .table-data .order table {
-	width: 100%;
-	border-collapse: collapse;
-}
-#content main .table-data .order table th {
-	padding-bottom: 12px;
-	font-size: 13px;
-	text-align: left;
-	border-bottom: 1px solid var(--grey);
-}
-#content main .table-data .order table td {
-	padding: 16px 0;
-}
-#content main .table-data .order table tr td:first-child {
+#content .container_cus{
 	display: flex;
-	align-items: center;
-	grid-gap: 12px;
-	padding-left: 6px;
+    flex-direction: column;
+    margin: 20px auto;
+    width: 80%;
 }
-#content main .table-data .order table td img {
-	width: 36px;
-	height: 36px;
-	border-radius: 50%;
-	object-fit: cover;
+
+#content .table-striped {
+    width: 100%;
+    border-collapse: collapse;
+    font-family: 'Arial', sans-serif;
+    text-align: center;
+	margin-top: 5px;
 }
-#content main .table-data .order table tbody tr:hover {
-	background: var(--grey);
-}
-#content main .table-data .order table tr td .status {
-	font-size: 10px;
-	padding: 6px 16px;
-	color: var(--light);
-	border-radius: 20px;
-	font-weight: 700;
-}
-#content main .table-data .order table tr td .status.completed {
-	background: var(--blue);
-}
-#content main .table-data .order table tr td .status.process {
-	background: var(--yellow);
-}
-#content main .table-data .order table tr td .status.pending {
-	background: var(--orange);
+.table-striped th, 
+.table-striped td {
+    border: 1px solid #ddd;
+    padding: 12px 15px;
 }
 
 
-#content main .table-data .todo {
-	flex-grow: 1;
-	flex-basis: 300px;
-}
-#content main .table-data .todo .todo-list {
-	width: 100%;
-}
-#content main .table-data .todo .todo-list li {
-	width: 100%;
-	margin-bottom: 16px;
-	background: var(--grey);
-	border-radius: 10px;
-	padding: 14px 20px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-#content main .table-data .todo .todo-list li .bx {
-	cursor: pointer;
-}
-#content main .table-data .todo .todo-list li.completed {
-	border-left: 10px solid var(--blue);
-}
-#content main .table-data .todo .todo-list li.not-completed {
-	border-left: 10px solid var(--orange);
-}
-#content main .table-data .todo .todo-list li:last-child {
-	margin-bottom: 0;
-}
 /* MAIN */
 /* CONTENT */
-
-
-
-
-
-
-
-
 
 @media screen and (max-width: 768px) {
 	#sidebar {
@@ -535,10 +459,6 @@ body {
 		display: none;
 	}
 }
-
-
-
-
 
 
 @media screen and (max-width: 576px) {
@@ -575,13 +495,6 @@ body {
 		grid-template-columns: 1fr;
 	}
 
-	#content main .table-data .head {
-		min-width: 420px;
-	}
-	#content main .table-data .order table {
-		min-width: 420px;
-	}
-	#content main .table-data .todo .todo-list {
-		min-width: 420px;
-	}
+
+
 }
